--- a/client/style/sass/app.scss
+++ b/client/style/sass/app.scss
@@ -112,6 +112,20 @@ a {
   color: white;
 }
 
+.bar{
+  background: #37474f;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.gauge{
+   background: #00897B;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
 .animated{
     -webkit-transition:all 800ms ease-in-out, height 800ms ease-in-out;
     -moz-transition:all 800ms ease-in-out, height 800ms ease-in-out;
