--- a/client/style/sass/app.scss
+++ b/client/style/sass/app.scss
@@ -8,6 +8,7 @@ html{
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   font-family: Helvetica Neue, Open Sans, sans-serif;
+  overflow:hidden;
 }
 
 a {
